attempting to fix page redirection problem

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,15 +34,15 @@
         </section>
 
         <aside id="sidebar">
-		  <a href="index.html" class="button">
+		  <a href="http://appdevclub.com/index.html" class="button">
             <small>Go to</small>
             Home
           </a>
-          <a href="about.html" class="button">
+          <a href="http://appdevclub.com/about.html" class="button">
             <small>Go to</small>
             About
           </a>
-          <a href="tutorials.html" class="button">
+          <a href="http://appdevclub.com/tutorials.html" class="button">
             <small>Go to</small>
             Tutorials
           </a>
